# muon_fsdp_2

./: README.md  helo.py  install.sh  pyproject.toml  train_ddp.py  train_fsdp.py
.github/workflows/: publish-pypi.yml
configs/7B/: H100.toml
src/muon_fsdp2/: README.md  __init__.py  pyproject.toml
src/muon_fsdp2/muon_fsdp2/: __init__.py
src/zeroband/models/llama/: model.py
